--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,7 +1,6 @@
 sonar.projectKey=AbdullaAlmannaee_8.2CDevSecOps
-sonar.organization=AbdullaAlmannaee
+sonar.organization=Abdullaalmannaee   # <-- check if lowercase
 sonar.host.url=https://sonarcloud.io
-sonar.login=${SONAR_TOKEN}
 
 sonar.sources=.
 sonar.exclusions=node_modules/**,test/**
