--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
 sonar.projectKey=AbdullaAlmannaee_8.2CDevSecOps
-sonar.organization=Abdullaalmannaee   # double-check if lowercase
+sonar.organization=abdullaalmannaee
 sonar.host.url=https://sonarcloud.io
 
 sonar.sources=.
