--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,9 +1,10 @@
 sonar.projectKey=AbdullaAlmannaee_8.2CDevSecOps
 sonar.organization=abdullaalmannaee
 sonar.host.url=https://sonarcloud.io
+sonar.login=${SONAR_TOKEN}
 
 sonar.sources=.
-sonar.exclusions=node_modules/**,test/**
+sonar.exclusions=node_modules/**,tests/**
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
 
 sonar.projectName=NodeJS Goof Vulnerable App
